<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center_vertical"
           android:layout_marginBottom="10dp"
           >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/hello"
                 android:textColor="@color/white"
                 android:textSize="32sp"
                 android:textStyle="bold" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/welcome"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </LinearLayout>

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/profilee"
               android:layout_marginLeft="100dp"
               />
       </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vbanner"
            android:layout_gravity="center"
            >


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams"
            android:layout_marginBottom="20sp"
            android:paddingLeft="40dp"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/line3"
            android:layout_gravity="center"
            />
    </LinearLayout>


    <!-- PAI -->
    <ListView
        android:id="@+id/lv_exams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>